# api_ecommercePet/app.js
@@ -18,6 +18,7 @@ var indexRouter = require('./routes/index');
 var clientesRouter = require('./routes/clientesRouter');
 var categoriaRouter = require('./routes/categoriaRouter');
 var produtosRouter = require('./routes/produtosRouter');
+var pedidoRouter = require('./routes/pedidoRouter');
 
 var app = express();
 
@@ -43,6 +44,7 @@ app.use('/', indexRouter);
 app.use('/clientes', clientesRouter);
 app.use('/categorias', categoriaRouter);
 app.use('/produtos', produtosRouter);
+app.use('/pedidos', pedidoRouter);
 //app.use('/users', usersRouter);
 
 // catch 404 and forward to error handler
